# calitx

./: .gitignore  Cargo.toml  test.json  test.txt
docs/datasets/: results.ipynb  yellow-trip.ipynb
scripts/: cedar.py  csv2json.sh  remove_columns.py  yellowtrip.py
src/: compress.rs  config.rs  errors.rs  events.rs  log_event.rs  logparse.rs  main.rs  stream.rs  timeseries.rs  tree.rs  tsparse.rs
src/compress/: compressor.rs  delta.rs  gorilla.rs  mod.rs  rhesus.rs  saru.rs  timeseries.rs
src/compress/delta/: mod.rs  test.rs
src/encodeco/: gorilla_encoder.rs  mod.rs  ts_decoder.rs  ts_encoder.rs  value_decoder.rs  value_encoder.rs
src/wip/: gorilla.rs  mod.rs
