[package]
name = "rstz"
version = "0.1.0"
authors = ["Andre Heringer <andregomesh@dcc.ufmg.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
getopts = "0.2.21"
simplelog = "^0.8.0"
log = "0.4.11"
bitvec = "0.17.4"
time = { version = "0.2.22", features = ["serde"] }