[package]
name = "rstz"
version = "0.1.0"
authors = ["Andre Heringer <andregomesh@dcc.ufmg.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
bitvec = "0.22.3"
chrono = { version = "0.4.19", features = ["serde"] }
fasthash = "0.4"